# adready-ai

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml  supabase-ci.yml  worker-ci.yml
backend/: pyproject.toml
backend/src/adready/: __init__.py
backend/src/adready/orchestrator/: __init__.py  main.py
backend/src/adready/workers/inference/: __init__.py  main.py
backend/src/adready/workers/media/: __init__.py  main.py
backend/tests/: test_entrypoints.py
docs/agents-md/: agent-reference.md  expected-input-format.md  golden-example-mm-a2.json  sample-evidence-bundle.json
frontend/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
supabase/: .env.example  .gitignore  config.toml  deno.json  seed.sql
supabase/functions/: .env.example
supabase/migrations/: 002_create_queue.sql  003_create_notify_trigger.sql  004_enqueue_function.sql  005_create_requests.sql  005_create_videos_bucket.sql  006_create_video_processing.sql  006_update_storage_rls.sql  007_create_requests_table.sql  008_create_video_processing.sql  009_create_transcript_segments.sql  010_create_request_videos.sql  010_split_product_images.sql  (+4 more)
worker/: .dockerignore  .env.example  Dockerfile  config.py  connection.py  handler.py  main.py  pyproject.toml  worker_queue.py
worker/analyzer/: output_models.py  types.py  video_analyzer.py  video_preprocessor.py
worker/analyzer/frame_sampling/: __init__.py  base.py  context.py  deferred.py  sampler.py  store.py
worker/analyzer/frame_sampling/probes/: __init__.py  adaptive.py  product.py  quality.py  scene.py  text.py
worker/app/: errors.py  heartbeat.py  main.py  processor.py  schemas.py  supabase.py  worker_queue.py
worker/config/: connection.py  errors.py  handler.py  heartbeat.py  settings.py  worker_queue.py
worker/docs/: ARCHITECTURE.md
worker/models/: FinalDecision.md
worker/models/models_testing/product_detection/: roboflow_owlv2_benchmark.py
worker/models/models_testing/transcription/: openrouter_openaiwhisper_benchmark.py
worker/tests/: test_video_analyzer.py
worker/tests/integration/: test_queue_contract.py
worker/tests/unit/: test_deferred.py  test_frame_sampling.py  test_output_models.py  test_processor.py  test_scene_probe.py  test_supabase.py  test_video_analyzer.py  test_video_preprocessor.py  test_worker_queue.py
(+105 files in other folders)
