[project]
name = "adready-backend"
version = "0.1.0"
description = "AdReady AI orchestration and worker processes"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<1",
    "uvicorn[standard]>=0.35,<1",
    "httpx>=0.28,<1",
    "pydantic>=2.11,<3",
    "structlog>=25,<26",
]

[project.optional-dependencies]
media = [
    "numpy>=2.0,<3",
    "opencv-python-headless>=4.10,<5",
    "pillow>=11,<12",
]
inference = []

[dependency-groups]
dev = [
    "pyright>=1.1.400,<2",
    "pytest>=8.4,<9",
    "ruff>=0.12,<1",
]

[project.scripts]
adready-orchestrator = "adready.orchestrator.main:main"
adready-media-worker = "adready.workers.media.main:main"
adready-inference-worker = "adready.workers.inference.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adready"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "tests"]
